--- a/dijkstra graph/web/index.html
+++ b/dijkstra graph/web/index.html
@@ -7,6 +7,7 @@
     <title>Romelio Suarez Weighted Graphs</title>
     <link rel="stylesheet" href="src/index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 
 <body>
